fixed the ES collapse button sizing. tooltips follow mouse movements fixed the UTC flipping and moved it out to a more obvious spot. Added more specific tooltip time label.

--- a/src/SfxWeb/src/Styles/_vis.scss
+++ b/src/SfxWeb/src/Styles/_vis.scss
@@ -143,7 +143,7 @@
   background-color: var(--primary-background-color) !important;;
   border-radius: var(--primary-border-radius) !important;;
   line-height: 1;
-
+  z-index: 100;
   table {
     word-break: break-all;
   }
